--- a/StoreBaeltTicketLibrary/StoreBaeltTicketLibrary.csproj
+++ b/StoreBaeltTicketLibrary/StoreBaeltTicketLibrary.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TicketSystemClassLibrary\TicketSystemClassLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
