--- a/Oresundsbron/Oresundsbron.csproj
+++ b/Oresundsbron/Oresundsbron.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TicketSystemClassLibrary\TicketSystemClassLibrary.csproj" />
+    <Reference Include="TicketSystemClassLibrary">
+      <HintPath>External DLL\TicketSystemClassLibrary.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
