--- a/StoreBaeltTicketLibrary/StoreBaeltTicketLibrary.csproj
+++ b/StoreBaeltTicketLibrary/StoreBaeltTicketLibrary.csproj
@@ -4,10 +4,13 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TicketSystemClassLibrary\TicketSystemClassLibrary.csproj" />
+    <Reference Include="TicketSystemClassLibrary">
+      <HintPath>External DLL\TicketSystemClassLibrary.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
